--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.6.0",
+    "jquery": "^3.7.1",
     "pinia": "^2.3.0",
     "vue": "^3.5.13"
   },
